apps/wiki.js/07.server-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wikijs-server
  namespace: wikijs
  labels:
    app: wikijs-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wikijs-server
  template:
    metadata:
      labels:
        app: wikijs-server
    spec:
      containers:
        - name: wikijs
          image: ghcr.io/requarks/wiki:2
          resources:
            requests:
              memory: "128Mi"
              cpu: "200m"
            limits:
              memory: "256Mi"
              cpu: "400m"
