apps/wiki.js/06.database-service.yml
apiVersion: v1
kind: Service
metadata:
  name: wikijs-database-service
  namespace: wikijs
  labels:
    app: wikijs-db
spec:
  ports:
  - protocol: TCP
    port: 5432
  selector:
    app: wikijs-db-deployment
