apps/wiki.js/08.server-service.yml
apiVersion: v1
kind: Service
metadata:
  name: wikijs-service
  namespace: wikijs
  labels:
    app: wikijs
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  selector:
    app: wikijs-server
